--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "devDependencies": {
     "@faker-js/faker": "^8.1.0",
+    "class-validator": "^0.14.0",
     "ts-node": "^10.9.1"
   },
   "scripts": {
@@ -12,5 +13,8 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "axios": "^1.5.1"
+  }
 }
